# ros2-mobile

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy-docs.yml
bridge/: __init__.py  __main__.py  cli.py  interfaces.py  node.py  requirements.txt  schema_validation.py  transform.py
bridge/schemas/: barometer.schema.json  battery.schema.json  camera.schema.json  gps.schema.json  imu.schema.json  infrared.schema.json  joy.schema.json  magnetometer.schema.json  thermal.schema.json
config/: zenoh-client-usb.conf.json5  zenoh-client-wifi.conf.json5  zenoh-server-android.conf.json5
docs/: README.md  _coverpage.md  _sidebar.md  index.html  privacy-policy.md
rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugin/config/: android_dashboard.rviz
rviz_plugin/include/android_sensor_viz/: android_dashboard_panel.hpp  android_sensor_panel.hpp  compass_widget.hpp  gnss_position_widget.hpp  imu_motion_widget.hpp  joystick_widget.hpp  magnetometer_widget.hpp  sensor_pulse_widget.hpp
rviz_plugin/src/: android_dashboard_panel.cpp  android_sensor_panel.cpp  compass_widget.cpp  gnss_position_widget.cpp  imu_motion_widget.cpp  joystick_widget.cpp  magnetometer_widget.cpp  sensor_pulse_widget.cpp
scripts/: setup.sh  start_bridge.sh
